# BonsCompte

./: .editorconfig  .gitignore  CLAUDE.md  LICENSE  README.md  details.php  docker-compose.override.yml  docker-compose.yml  functions.php  index.php  insert.php  lint-staged.config.js  login.php  nodebt.kdev4  package-lock.json  package.json  show.php  sql.php
.claude/: settings.json  settings.local.json
.claude/scripts/: validate-bash.sh
.github/: dependabot.yml
.github/codeql/: codeql-config.yml
.github/workflows/: codeql.yml  dependabot-auto-merge.yml  docker-build.yml  test.yml
.husky/: pre-commit
.kdev4/: nodebt.kdev4
backend/: .env.example  Cargo.toml  Dockerfile  recalculate_contributions.sql
backend/.cargo/: config.toml
backend/migrations/: 001_initial_schema.sql  002_add_user_preferences.sql  002_payment_enhancements.sql  003_user_management.sql
backend/src/: admin.rs  config.rs  db.rs  error.rs  lib.rs  main.rs
backend/src/auth/: handlers.rs  jwt.rs  middleware.rs  mod.rs  password.rs
backend/src/models/: approval.rs  bounded.rs  contribution.rs  history.rs  interest_rule.rs  member.rs  mod.rs  participant.rs  payment.rs  project.rs  recovery_intent.rs  trusted_user.rs  user.rs
backend/src/routes/: approvals.rs  auth.rs  budget.rs  cashflow.rs  debts.rs  history.rs  members.rs  mod.rs  participants.rs  payments.rs  projects.rs  recovery.rs  users.rs
backend/src/services/: approval_service.rs  budget_calculator.rs  debt_calculator.rs  history.rs  image_validator.rs  mod.rs
backend/tests/: auth_tests.rs
docker/: docker-compose.yml
docs/: BACKUPS.md  GITHUB_BRANCH_PROTECTION.md  NGINX_CONFIGURATION.md  NGINX_PRODUCTION.conf  NGINX_RATE_LIMIT_FIX.md  PAGE_ARCHITECTURE.md  PASSWORD_RECOVERY.md  PHASE1_ACCOUNTS.md  RATE_LIMIT_FIX_SUMMARY.md  ROADMAP.md  SECURITY.md
frontend/: .env.example  Dockerfile  eslint.config.js  package-lock.json  package.json  vitest.config.ts
frontend/src/lib/: api.ts  auth.ts  date-projection.svelte.ts  date-projection.ts  errors.ts  recurrence-utils.ts  utils.ts
frontend/src/lib/components/: DateInput.svelte  DateSelectorCard.svelte  ExportCsvButton.svelte  FocusCard.svelte  InterestRulesEditor.svelte  (+2 more)
frontend/src/routes/: +layout.svelte  +page.svelte
frontend/src/styles/: moit-doll.css
frontend/src/tests/: api-config.test.ts  api.test.ts  csv.test.ts  navigation.test.ts  overview-interactions.test.ts  recurrence.test.ts  setup.ts
scripts/backup/: backup.env.example  bonscompte-backup.sh  bonscompte-restore.sh
(+52 files in other folders)
