[package]
name = "bonscompte-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
mongodb = { version = "2.5.0", default-features = false, features = ["tokio-runtime"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenvy = "0.15"
tracing-subscriber = "0.3.22"

[registries.crates-io]
protocol = "sparse"
