[package]
name = "bonscompte-backend"
version = "0.1.0"
edition = "2021"
default-run = "bonscompte-backend"

[lib]
name = "bonscompte_backend"
path = "src/lib.rs"

[[bin]]
name = "bonscompte-backend"
path = "src/main.rs"

[[bin]]
name = "bonscompte-admin"
path = "src/admin.rs"

[dependencies]
# Web framework
axum = { version = "0.8", features = ["macros"] }
axum-extra = { version = "0.12", features = ["typed-header"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Auth
jsonwebtoken = "9"
argon2 = "0.5"
rand = "0.8"

# Utilities
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
log = "0.4"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
clap = { version = "4", features = ["derive"] }
uuid = { version = "1", features = ["v4"] }
sha2 = "0.10"
hex = "0.4"

# Rate limiting
tower = "0.5"
governor = "0.8"
tower_governor = "0.6"

[dev-dependencies]
axum-test = "16"
tempfile = "3"
